xtask/src/snapshots/xtask__release__tests__plan_dry_run_final_minor_color_on.snap
---
source: xtask/src/release.rs
expression: out
---
[1m[36m═══ unblock release ═══[0m
  [32m✓[0m on branch `main` (HEAD is `main`)
  [32m✓[0m working tree is clean
  [32m✓[0m local `main` is in sync with `origin/main`
  [33m⚠[0m reminder: the publish step needs a `WS_GH_TOKEN` repo secret with `contents: write` (cannot be verified from here — see ci-cd §3.1).
Release type:
  1) pre-release (rc)
  2) final
Choose [1/2]: Version bump:
  1) none (release current version as-is)
  2) patch
  3) minor
  4) major
Choose [1/2/3/4]: 
┌─ Release plan ─────────────────────────┐
│ version       : [1m1.0.0 → 1.1.0[0m          │
│ tag           : [1mv1.1.0[0m                 │
│ pre-release   : no (final)             │
│ files changed : Cargo.toml, Cargo.lock │
└────────────────────────────────────────┘
[31mIRREVERSIBLE: pushing v1.1.0 triggers the public dist release and CANNOT be undone.[0m

[dry-run] would: set [workspace.package] version = "1.1.0" in Cargo.toml
[dry-run] would: cargo update --workspace
[dry-run] would: git add -- Cargo.toml Cargo.lock && git commit -m "release: v1.1.0"
[dry-run] would: git tag -a v1.1.0 -m "release v1.1.0"
[dry-run] would: git push --atomic origin main v1.1.0
[dry-run] no changes made; working tree untouched
