xtask/src/snapshots/xtask__release__tests__real_run_full_stdout.snap
---
source: xtask/src/release.rs
expression: out
---
═══ unblock release ═══
  ✓ on branch `main` (HEAD is `main`)
  ✓ working tree is clean
  ✓ local `main` is in sync with `origin/main`
  ⚠ reminder: the publish step needs a `WS_GH_TOKEN` repo secret with `contents: write` (cannot be verified from here — see ci-cd §3.1).
Release type:
  1) pre-release (rc)
  2) final
Choose [1/2]: Version bump:
  1) none (release current version as-is)
  2) patch
  3) minor
  4) major
Choose [1/2/3/4]: 
┌─ Release plan ─────────────────────────┐
│ version       : 1.0.0 → 1.1.0          │
│ tag           : v1.1.0                 │
│ pre-release   : no (final)             │
│ files changed : Cargo.toml, Cargo.lock │
└────────────────────────────────────────┘
IRREVERSIBLE: pushing v1.1.0 triggers the public dist release and CANNOT be undone.


  !! IRREVERSIBLE PUBLISH — v1.1.0 !!  
  This pushes the tag and triggers the public dist release; it CANNOT be undone.

Type the tag `v1.1.0` exactly to CONFIRM (anything else aborts): Local commit + tag `v1.1.0` created. Type `v1.1.0` AGAIN to PUSH (irreversible), anything else stops: pushed v1.1.0 to origin — the dist release workflow is now running.
