xtask/src/snapshots/xtask__release__tests__real_run_full_stdout_color_on.snap
---
source: xtask/src/release.rs
assertion_line: 1812
expression: out
---
[1m[36m═══ unblock release ═══[0m
  [32m✓[0m on branch `main` (HEAD is `main`)
  [32m✓[0m working tree is clean
  [32m✓[0m local `main` is in sync with `origin/main`
  [33m⚠[0m reminder: the publish step needs a `WS_GH_TOKEN` repo secret with `contents: write` (cannot be verified from here — see ci-cd §3.1).
Release type:
  1) pre-release (rc)
  2) final
Choose [1/2]: Version bump:
  1) none (release current version as-is)
  2) patch
  3) minor
  4) major
Choose [1/2/3/4]: 
┌─ Release plan ─────────────────────────┐
│ version       : [1m1.0.0 → 1.1.0[0m          │
│ tag           : [1mv1.1.0[0m                 │
│ pre-release   : no (final)             │
│ files changed : Cargo.toml, Cargo.lock │
└────────────────────────────────────────┘
[31mIRREVERSIBLE: pushing v1.1.0 triggers the public dist release and CANNOT be undone.[0m


[1m[97m[41m  !! IRREVERSIBLE PUBLISH — v1.1.0 !!  [0m
  This pushes the tag and triggers the public dist release; it CANNOT be undone.

Type the tag `v1.1.0` exactly to CONFIRM (anything else aborts): Local commit + tag `v1.1.0` created. Type `v1.1.0` AGAIN to PUSH (irreversible), anything else stops: [32mpushed v1.1.0 to origin — the dist release workflow is now running.[0m
